--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "joker",
   "version": "1.0.0",
-  "description": "Environment-setup",
+  "description": "example",
+  "type": "module",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
