--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "homepage": "https://github.com/ftmkrtgz/joker#readme",
   "devDependencies": {
     "prettier": "^3.1.1"
+  },
+  "dependencies": {
+    "give-me-a-joke": "^0.5.0"
   }
 }
