--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/ftmkrtgz/joker#readme",
   "devDependencies": {
+    "eslint": "^8.56.0",
     "prettier": "^3.1.1"
   },
   "dependencies": {
